slike zamijenjene slikama sa watermarkom i dodati opisi nekim od projekata

--- a/dizajn-eksterijera.html
+++ b/dizajn-eksterijera.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>VB Inženjering - 3D dizajn eksterijera</title>
+    <title>VB Inženjering - 3D vizualizacija eksterijera</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -66,7 +66,7 @@
                         </li>
                         <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
                         <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
-                        <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                        <li class="dropdown"><a href="#"><span>3D vizualizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                             <ul>
                                 <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
                                 <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
@@ -107,7 +107,7 @@
                     <div class="swiper-wrapper align-items-center">
 
                         <div class="swiper-slide">
-                            <img src="assets/img/projects/eksterijeri/1.jpeg" alt="3D vizuelizacija vikendice brvnara u obliku slova A sa velikim prozorima usred snežnog pejzaža u sumrak.">
+                            <img src="assets/img/projects/eksterijeri/1.jpeg" alt="3D vizualizacija vikendice brvnara u obliku slova A sa velikim prozorima usred snežnog pejzaža u sumrak.">
                         </div>
                         <div class="swiper-slide">
                             <img src="assets/img/projects/eksterijeri/2.jpeg" alt="">
@@ -125,12 +125,12 @@
 
                 <div class="col-lg-8">
                     <div class="portfolio-description">
-                        <h2>Vikendica</h2>
+                        <h2>Planinska oaza: 3D prikaz savremene planinske kolibe</h2>
                         <p>
-                            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                            Kroz 3D vizualizaciju, klijentu je omogućeno da pre početka gradnje vidi kako će objekat izgledati u različitim uslovima osvetljenja i u potpunosti prilagodi svaki eksterijerni detalj, od boje drveta do završne obrade krova, osiguravajući da se konačni rezultat potpuno podudara sa njegovom vizijom idealnog planinskog doma.
                         </p>
                         <p>
-                            Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                            Eksterijer moderne planinske vikendice, upečatljivog dizajna u obliku slova A, odlikuje skladan spoj prirodnih materijala i savremenog minimalizma. Objekat je obložen toplim drvenim panelima, dok su veliki stakleni portali ključni elementi koji obezbeđuju maksimalan prodor svetla i pružaju divan pogled na prirodu. Posebna pažnja posvećena je prostranoj terasi koja je vizualizovana kao idealno mesto za opuštanje, čak i u zimskim uslovima.
                         </p>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                     <div class="portfolio-info">
                         <h3>Informacije</h3>
                         <ul>
-                            <li><strong>Kategorija</strong> <span>3D vizuelizacija</span></li>
+                            <li><strong>Kategorija</strong> <span>3D vizualizacija</span></li>
                             <li><strong>Izrađeno</strong> <span>2025.</span></li>
                         </ul>
                     </div>
