--- a/dizajn-enterijera.html
+++ b/dizajn-enterijera.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>VB Inženjering - 3D dizajn enterijera</title>
+    <title>VB Inženjering - 3D vizualizacija enterijera</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -66,7 +66,7 @@
                         </li>
                         <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
                         <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
-                        <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                        <li class="dropdown"><a href="#"><span>3D vizualizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                             <ul>
                                 <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
                                 <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
@@ -141,12 +141,12 @@
 
                 <div class="col-lg-8">
                     <div class="portfolio-description">
-                        <h2>Apartman</h2>
+                        <h2>Od vizije do stvarnosti: 3D prikaz enterijera apartmana</h2>
                         <p>
-                            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                            Kreiranje idealnog životnog ili radnog prostora zahteva više od same izgradnje – potreban je pažljivo osmišljen dizajn enterijera. U VB Inženjeringu, kroz našu uslugu 3D vizualizacije, nudimo vam mogućnost da pre početka radova detaljno sagledate i prilagodite svaki aspekt unutrašnjeg uređenja.
                         </p>
                         <p>
-                            Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                            Ovaj projekat enterijera osmišljen je sa ciljem stvaranja modernog, funkcionalnog i udobnog životnog prostora za mladu porodicu. Kroz pažljivo planiranje rasporeda prostorija, iskorišćena je maksimalna količina prirodne svetlosti, a izborom neutralne palete boja stvoren je osećaj prostranosti i elegancije. Centralni deo stana čini prostrani dnevni boravak sa integrisanom kuhinjom i trpezarijom, dizajniran za druženje i opuštanje.
                         </p>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
                     <div class="portfolio-info">
                         <h3>Informacije</h3>
                         <ul>
-                            <li><strong>Kategorija</strong> <span>3D vizuelizacija</span></li>
+                            <li><strong>Kategorija</strong> <span>3D vizualizacija</span></li>
                             <li><strong>Izrađeno</strong> <span>2025.</span></li>
                         </ul>
                     </div>
@@ -204,12 +204,12 @@
 
                 <div class="col-lg-8">
                     <div class="portfolio-description">
-                        <h2>Zubarska ordinacija</h2>
+                        <h2>Savremena stomatološka ordinacija Dimić Dent</h2>
                         <p>
-                            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                            Ovaj projekat 3D vizualizacije predstavlja konceptualno rešenje za modernu stomatološku ordinaciju, sa ciljem da se kreira prostor koji spaja visoki profesionalizam sa osećajem udobnosti i čistoće.
                         </p>
                         <p>
-                            Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                            Kroz pažljivo planiranje, kreiran je logičan raspored prostorija koji omogućava nesmetan protok pacijenata, od čekaonice, preko prostorije za sterilizaciju, do ordinacijske sale, za prostor od oko 40 metara kvadratnih. U dizajnu su integrisana rešenja za najsavremeniju medicinsku opremu, osiguravajući da ordinacija bude spremna za sve potrebe moderne stomatologije. 3D model je omogućio klijentu da detaljno sagleda prostor, materijale i osvetljenje, potvrđujući da je konačni dizajn istovremeno estetski privlačan i savršeno prilagođen svrsi.
                         </p>
                     </div>
                 </div>
@@ -218,7 +218,7 @@
                     <div class="portfolio-info">
                         <h3>Informacije</h3>
                         <ul>
-                            <li><strong>Kategorija</strong> <span>3D vizuelizacija</span></li>
+                            <li><strong>Kategorija</strong> <span>3D vizualizacija</span></li>
                             <li><strong>Izrađeno</strong> <span>2025.</span></li>
                         </ul>
                     </div>
