--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               </li>
               <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
               <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
-              <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+              <li class="dropdown"><a href="#"><span>3D vizualizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
                   <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
@@ -135,7 +135,7 @@
             <h2 data-aos="fade-up" style="font-size: 4vh; font-weight: 400; color: #f1f1f1; letter-spacing: 1px;">
               Građevinska rešenja budućnosti
             </h2>
-            <a data-aos="fade-up" data-aos-delay="200" href="#get-started" class="btn-get-started">Sarađujte sa nama <i class="fa-solid fa-arrow-right"></i></a>
+            <a data-aos="fade-up" data-aos-delay="200" href="#kontaktSekcija" class="btn-get-started">Sarađujte sa nama <i class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
       </div>
@@ -179,7 +179,7 @@
             </div>
           </div>
 
-          <div class="col-lg-5" data-aos="fade">
+          <div class="col-lg-5" id="kontaktSekcija" data-aos="fade">
             <form action="forms/sendMail.php" name="form" method="POST" class="php-email-form" id="pocetna-forma" novalidate>
               <h3>Kontaktirajte nas</h3>
               <p>Za sve Vaše potrebe u vezi sa građevinskim ili građevinsko-zanatskim radovima, stojimo na raspolaganju. Kontaktirajte nas porukom.</p>
@@ -288,7 +288,7 @@
               <div class="icon">
                 <i class="fa-solid fa-cubes"></i>
               </div>
-              <h3>3D vizuelizacija</h3>
+              <h3>3D vizualizacija</h3>
               <p>Napredne 3D vizualizacije i BIM modeli koji omogućavaju investitorima i izvođačima jasnu predstavu o projektu. Olakšavaju komunikaciju i identifikaciju potencijalnih problema pre početka radova.</p>
               <a href="usluge.html#vizuelizacija" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
@@ -337,14 +337,14 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Najnoviji projekti</h2>
-          <p>Upoznajte se sa našim radovima kroz izvedene projekte i uverite se u posvećenost koju ulažemo u svaki detalj. Pregledajte sve dosadašnje projekte: </p>
+          <h2>Novi projekti</h2>
+          <p>Spremni smo da vaše ideje pretvorimo u stvarnost, bilo da su u pitanju projekti iz našeg kataloga ili jedinstvena rešenja kreirana po vašem zahtevu. Upoznajte se sa našim radovima i pregledajte sve dosadašnje projekte: </p>
           <br><a href="projekti.html">SVI PROJEKTI</a>
         </div>
         <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-content h-100">
-              <img src="assets/img/projects/montazni/aFrame/ostaleKuce/aframe.png" class="img-fluid" alt="">
+              <img src="assets/img/projects/montazni/aFrame/ostaleKuce/aframe.png" class="img-fluid" alt="Kolaž od 6 različitih modela motažnih kuća u A-frame stilu">
               <div class="portfolio-info">
                 <h4>Kuće u A-frame stilu</h4>
                 <p>Veliki izbor različitih kuća</p>
@@ -417,6 +417,14 @@
 
           <div class="col-lg-6 d-flex">
             <div class="team-member p-4 shadow-sm rounded bg-white h-100 w-100 d-flex flex-column">
+              <h4>Aleksandar Živković</h4>
+              <p class="text-muted" style="font-style: italic;"><i class="fa-solid fa-map-location-dot"></i>  master inž. geodezije</p>
+              <p>Aleksandar Živković je master inženjer geodezije sa bogatim terenskim iskustvom i dugogodišnjim radom na različitim infrastrukturnim i građevinskim projektima. Specijalizovan je za <strong>savremene metode geodetskog snimanja</strong> i preciznu <strong>obradu geo-tačaka</strong>, uz korišćenje moderne opreme i softverskih rešenja. Njegova stručnost, preciznost i posvećenost čine ga pouzdanim osloncem u svim fazama projektovanja i izvođenja radova.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-6 d-flex">
+            <div class="team-member p-4 shadow-sm rounded bg-white h-100 w-100 d-flex flex-column">
               <h4>Nikola Marković</h4>
               <p class="text-muted" style="font-style: italic;"><i class="fa-solid fa-building-user"></i>  struk. inž. građevinarstva</p>
               <p>Specijalista za niskogradnju i praktičnu primenu građevinske struke. Diplomirao je na <strong>Akademiji strukovnih studija Zapadna Srbija</strong>, smer građevinarstvo, steknuvši zvanje strukovnog inženjera, a trenutno pohađa master studije. Višegodišnje iskustvo stekao je u preduzeću <strong>Putevi Užice</strong>, gde je učestvovao u realizaciji brojnih infrastrukturnih projekata. Svojim znanjem u oblasti puteva, saobraćajnica i terenskih radova, Nikola donosi pouzdanost i stručnost u tim VB Inženjeringa.</p>
@@ -430,13 +438,6 @@
               <p>Stručnjak za <strong>jaku i slabu struju</strong> sa bogatim iskustvom u izvođenju elektroinstalacija na terenu. Završio je strukovne studije elektrotehnike, a kroz višegodišnji rad razvio je visok nivo praktičnog znanja u realizaciji <strong>elektroenergetskih i telekomunikacionih sistema</strong>. Posebno se ističe u oblasti instalacija jake struje (rasveta, razvod, zaštita) i slabe struje (video nadzor, alarmni sistemi, telekomunikacije). Pouzdan i precizan, Srđan doprinosi timu VB Inženjeringa kroz kvalitetnu realizaciju i stručno vođenje elektro radova.</p>
             </div>
           </div>
-
-          <div class="col-lg-6 d-flex">
-            <div class="team-member p-4 shadow-sm rounded bg-white h-100 w-100 d-flex flex-column">
-              <img src="assets/img/logo/naslovnica1.png">
-            </div>
-          </div>
-
         </div>
       </div>
     </section>
