--- a/montazni-objekti-a-frame.html
+++ b/montazni-objekti-a-frame.html
@@ -76,7 +76,7 @@
                         </li>
                         <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
                         <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
-                        <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                        <li class="dropdown"><a href="#"><span>3D vizualizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                             <ul>
                                 <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
                                 <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
@@ -112,10 +112,16 @@
         <div class="container">
             <div class="row align-items-center">
 
-                <div class="col-lg-6">
+                <div class="col-lg-6" style="padding-right: 50px;">
                     <h3 class="mb-4">Savršena ravnoteža dizajna i funkcionalnosti</h3>
                     <p class="mb-3">
-                        TEKST....
+                        Naša kolekcija A-frame montažnih kuća nudi savršenu ravnotežu između modernog dizajna i praktične izgradnje. Ovi objekti, prepoznatljivi po karakterističnom izgledu u obliku slova A, predstavljaju idealne <strong>vikendice, planinske kuće, turističke objekte ili porodične domove</strong>.
+                    </p>
+                    <p>
+                        Imate <strong>potpunu slobodu izbora</strong>: odlučite se za ovaj ili neki od elegantnih, gotovih projekata koji su prikazani dalje u našem katalogu, ili pak možemo dogovoriti jedinstveni projekat. U tom slučaju, naš tim je tu da pažljivo oslušne vaše ideje, potrebe i viziju, te da izradi potpuno personalizovan projekat vašeg budućeg doma ili vikendice.
+                    </p>
+                    <p>
+                        Objekti se izrađuju od <strong>visokokvalitetne drvene konstrukcije</strong>, što garantuje izuzetnu stabilnost i prirodan izgled. Posebna pažnja posvećuje se detaljima i završnoj obradi po izboru, a uz to postoji i mogućnost dodatne <strong>termoizolacije</strong> koja osigurava energetsku efikasnost i udobnost tokom cele godine.
                     </p>
                 </div>
 
@@ -123,31 +129,31 @@
                     <div class="swiper mySwiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="assets/img/projects/montazni/aFrame/mainKuca/1.jpeg" alt="Slika 1" class="img-fluid rounded shadow-sm">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/1.jpeg" alt="Eksterijer moderne montažne drvene vikendice u planini u A-frame stilu."  class="img-fluid rounded shadow-sm">
                             </div>
                             <div class="swiper-slide">
-                                <img src="assets/img/projects/montazni/aFrame/mainKuca/2.jpeg" alt="" class="img-fluid rounded shadow-sm">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/2.jpeg" class="img-fluid rounded shadow-sm">
                             </div>
                             <div class="swiper-slide">
-                                <img src="assets/img/projects/montazni/aFrame/mainKuca/3.jpeg" alt="Slika 3" class="img-fluid rounded shadow-sm">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/3.jpeg" class="img-fluid rounded shadow-sm">
                             </div>
                             <div class="swiper-slide">
-                                <img src="assets/img/projects/montazni/aFrame/mainKuca/4.jpeg" alt="Slika 3" class="img-fluid rounded shadow-sm">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/4.jpeg" class="img-fluid rounded shadow-sm">
                             </div>
                             <div class="swiper-slide">
-                                <img src="assets/img/projects/montazni/aFrame/mainKuca/5.jpeg" alt="Slika 3" class="img-fluid rounded shadow-sm">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/5.jpeg" class="img-fluid rounded shadow-sm">
                             </div>
                             <div class="swiper-slide">
-                                <img src="assets/img/projects/montazni/aFrame/mainKuca/6.jpeg" alt="Slika 3" class="img-fluid rounded shadow-sm">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/6.jpeg" class="img-fluid rounded shadow-sm">
                             </div>
                             <div class="swiper-slide">
-                                <img src="assets/img/projects/montazni/aFrame/mainKuca/7.jpeg" alt="Slika 3" class="img-fluid rounded shadow-sm">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/7.jpeg" class="img-fluid rounded shadow-sm">
                             </div>
                             <div class="swiper-slide">
-                                <img src="assets/img/projects/montazni/aFrame/mainKuca/8.jpeg" alt="Slika 3" class="img-fluid rounded shadow-sm">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/8.jpeg" class="img-fluid rounded shadow-sm">
                             </div>
                             <div class="swiper-slide">
-                                <img src="assets/img/projects/montazni/aFrame/mainKuca/9.jpeg" alt="Slika 3" class="img-fluid rounded shadow-sm">
+                                <img src="assets/img/projects/montazni/aFrame/mainKuca/9.jpeg" class="img-fluid rounded shadow-sm">
                             </div>
                         </div>
                         <div class="swiper-pagination"></div>
@@ -160,57 +166,27 @@
         </div>
     </section>
 
-    <!-- ======= Projet Details Section ======= -->
-    <section id="project-details-5" class="project-details">
-        <div class="container" data-aos="fade-up" data-aos-delay="100">
-            <div class="row justify-content-between gy-4 mt-4">
-
-                <div class="col-lg-8">
-                    <div class="portfolio-description">
-                        <h2>NASLOV</h2>
-                        <p>
-                            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-                        </p>
-                        <p>
-                            Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-lg-3">
-                    <div class="portfolio-info">
-                        <h3>Informacije</h3>
-                        <ul>
-                            <li><strong>Kategorija</strong> <span>Montažni objekti</span></li>
-                            <li><strong>Izrađeno</strong> <span>2025.</span></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section><!-- End Projet Details Section -->
-
     <section class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center mb-4">Dostupni modeli montažnih kuća</h2><br>
             <div class="row g-4">
                 <div class="col-12 col-md-4">
-                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/1.jpeg" alt="Projekat 1" class="img-fluid rounded shadow-sm gallery-img">
+                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/1.jpeg" alt="Različiti modeli montažnih kuća u A-frame stilu koje su dostupne za izgradnju."  class="img-fluid rounded shadow-sm gallery-img">
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/2.jpeg" alt="Projekat 2" class="img-fluid rounded shadow-sm gallery-img">
+                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/2.jpeg" class="img-fluid rounded shadow-sm gallery-img">
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/3.jpeg" alt="Projekat 3" class="img-fluid rounded shadow-sm gallery-img">
+                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/3.jpeg"  class="img-fluid rounded shadow-sm gallery-img">
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/4.jpeg" alt="Projekat 4" class="img-fluid rounded shadow-sm gallery-img">
+                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/4.jpeg"  class="img-fluid rounded shadow-sm gallery-img">
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/5.jpeg" alt="Projekat 5" class="img-fluid rounded shadow-sm gallery-img">
+                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/5.jpeg"  class="img-fluid rounded shadow-sm gallery-img">
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/6.jpeg" alt="Projekat 6" class="img-fluid rounded shadow-sm gallery-img">
+                    <img src="assets/img/projects/montazni/aFrame/ostaleKuce/6.jpeg"  class="img-fluid rounded shadow-sm gallery-img">
                 </div>
             </div>
         </div>
