--- a/montazni-objekti-classic.html
+++ b/montazni-objekti-classic.html
@@ -66,7 +66,7 @@
                         </li>
                         <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
                         <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
-                        <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                        <li class="dropdown"><a href="#"><span>3D vizualizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                             <ul>
                                 <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
                                 <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
@@ -107,7 +107,7 @@
                     <div class="swiper-wrapper align-items-center">
 
                         <div class="swiper-slide">
-                            <img src="assets/img/projects/montazni/klasicni/klasik1.jpeg" alt="">
+                            <img src="assets/img/projects/montazni/klasicni/klasik1.jpeg" alt="Moderna jednospratna montažna kuća bijele boje sa crnim krovom.">
                         </div>
                         <div class="swiper-slide">
                             <img src="assets/img/projects/montazni/klasicni/klasik2.jpeg" alt="">
@@ -127,22 +127,33 @@
 
                 <div class="col-lg-8">
                     <div class="portfolio-description">
-                        <h2>NASLOV</h2>
+                        <h2>Ukoliko želite dom koji se prilagođava vama, a ne obrnuto, zajedno ćemo ga realizovati. </h2>
                         <p>
-                            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                            Predstavljamo vam pažljivo osmišljene montažne objekte savršene za <strong>udoban porodični život, vikendice ili poslovne prostore</strong>. Ono što nas čini posebnim jeste naša posvećenost personalizaciji. Nudimo vam jedinstvenu priliku da zajedno sa našim stručnim timom razvijete potpuno individualizovan projekat, oblikovan prema vašim ličnim idejama i potrebama.
                         </p>
                         <p>
-                            Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                            Naši montažni objekti izrađuju se prema svim važećim standardima od visoko kvalitetnih materijala, sa robusnom drvenom konstrukcijom. Glavni delovi, odnosno moduli ili paneli, izrađuju se unapred u kontrolisanim uslovima fabrike, a zatim se transportuju na lokaciju i sklapaju na pripremljenom temelju. Garantujemo stabilnost i dugovečnost a uz to nudimo i širok spektar opcija za izolaciju i završnu obradu.
                         </p>
+
                     </div>
                 </div>
 
                 <div class="col-lg-3">
                     <div class="portfolio-info">
-                        <h3>Informacije</h3>
+                        <h3>Prednosti montažnih kuća:</h3>
                         <ul>
-                            <li><strong>Kategorija</strong> <span>Montažni objekti</span></li>
-                            <li><strong>Izrađeno</strong> <span>2025.</span></li>
+                            <li>
+                                <i class="bi bi-check-circle"></i> <span><strong>Brza izgradnja</strong></span>
+                            </li>
+                            <li>
+                                <i class="bi bi-check-circle"></i> <span><strong>Ekonomičnost</strong></span>
+                            </li>
+                            <li>
+                                <i class="bi bi-check-circle"></i> <span><strong>Energetska efikasnost</strong></span>
+                            </li>
+                            <li>
+                                <i class="bi bi-check-circle"></i> <span><strong>Fleksibilnost dizajna</strong></span>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -160,7 +171,7 @@
                     <div class="swiper-wrapper align-items-center">
 
                         <div class="swiper-slide">
-                            <img src="assets/img/projects/montazni/klasicni/klasik4.jpeg" alt="">
+                            <img src="assets/img/projects/montazni/klasicni/klasik4.jpeg" alt="Moderna minimalistička bijela kuća ravnog krova sa velikim prozorima i balkonom.">
                         </div>
                         <div class="swiper-slide">
                             <img src="assets/img/projects/montazni/klasicni/klasik5.jpeg" alt="">
@@ -177,12 +188,12 @@
 
                 <div class="col-lg-8">
                     <div class="portfolio-description">
-                        <h2>NASLOV</h2>
+                        <h2>Moderan dom ravnog krova</h2>
                         <p>
-                            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                            Montažne kuće sa ravnim krovom predstavljaju moderan i sve popularniji trend u savremenoj arhitekturi. Ravan krov daje objektu <strong>čist i elegantan izgled</strong> ali je istovremeno i dodatna korisna površina. Na primer, savršena za jednostavnu <strong>instalaciju solarnih panela</strong>.
                         </p>
                         <p>
-                            Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                            U poređenju sa složenim krovnim konstrukcijama, ravan krov je lakši za izvođenje i zahteva manje materijala i radnih sati za montažu. Kod montažnih objekata olakšava potencijalnu nadogradnju objekta. Iako su ravni krovovi ranije bili povezani sa rizikom od nakupljanja vode, moderna tehnologija i kvalitetni <strong>hidroizolacioni materijali</strong> su rešili taj problem. Uz pravilnu drenažu i stručnu izvedbu, ravan krov je pouzdan i dugotrajan element.
                         </p>
                     </div>
                 </div>
