--- a/projekti.html
+++ b/projekti.html
@@ -65,7 +65,7 @@
               </li>
               <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
               <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
-              <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+              <li class="dropdown"><a href="#"><span>3D vizualizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
                   <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
@@ -159,7 +159,7 @@
                 <img src="assets/img/projects/montazni/klasicni/klasik1.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Kuća 1</h4>
-                  <p>Kuća u klasičnom stilu</p>
+                  <p>Montažna kuća u klasičnom stilu</p>
                   <a href="assets/img/projects/montazni/klasicni/klasik1.jpeg" data-gallery="portfolio-gallery-montazni" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="montazni-objekti-classic.html#project-details-3" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -172,7 +172,7 @@
                 <img src="assets/img/projects/montazni/aFrame/ostaleKuce/aframe.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Kuće u A-frame stilu</h4>
-                  <p>Veliki izbor različitih kuća</p>
+                  <p>Veliki izbor različitih montažnih kuća</p>
                   <a href="assets/img/projects/montazni/aFrame/ostaleKuce/aframe.png" data-gallery="portfolio-gallery-montazni" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="montazni-objekti-a-frame.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -184,7 +184,7 @@
                 <img src="assets/img/projects/montazni/klasicni/klasik5-cut.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Kuća 2</h4>
-                  <p>Dizajn modernog stambenog objekta</p>
+                  <p>Dizajn stambenog objekta ravnog krova</p>
                   <a href="assets/img/projects/montazni/klasicni/klasik5.jpeg" data-gallery="portfolio-gallery-montazni" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="montazni-objekti-classic.html#project-details-4" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -197,7 +197,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-vizualizacije">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/eksterijeri/1.jpeg" class="img-fluid" alt="3D vizuelizacija vikendice brvnara u obliku slova A sa velikim prozorima usred snežnog pejzaža u sumrak.">
+                <img src="assets/img/projects/eksterijeri/1.jpeg" class="img-fluid" alt="3D vizualizacija vikendice brvnara u obliku slova A sa velikim prozorima usred snežnog pejzaža u sumrak.">
                 <div class="portfolio-info">
                   <h4>Vikendica</h4>
                   <p>Eksterijer stambenog objekta</p>
@@ -212,7 +212,7 @@
                 <img src="assets/img/projects/enterijeri/apartman/1.jpeg" class="img-fluid" alt="3D vizualizacija modernog stana ili apartmana sa svetlo sivim kaučima i plavim jastucima.">
                 <div class="portfolio-info">
                   <h4>Apartman</h4>
-                  <p>Enterijer apartmana</p>
+                  <p>Dizajn enterijera modernog apartmana</p>
                   <a href="assets/img/projects/enterijeri/apartman/1.jpeg"  data-gallery="portfolio-gallery-vizuelizacije" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="dizajn-enterijera.html#project-details-2" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
