--- a/usluge.html
+++ b/usluge.html
@@ -79,7 +79,7 @@
               </li>
               <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
               <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
-              <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+              <li class="dropdown"><a href="#"><span>3D vizaelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
                   <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
@@ -228,12 +228,12 @@
               <div class="swiper-button-next"></div>
             </div>
             <br>
-            <h3>3D vizuelizacija enterijera i eksterijera</h3>
+            <h3>3D vizaelizacija enterijera i eksterijera</h3>
             <p>
               Koristeći napredne tehnologije, kreiramo detaljne 3D vizualizacije koje investitorima i izvođačima pružaju kristalno jasnu predstavu o finalnom izgledu projekta.
             </p>
             <p>
-              Pored vizuelizacija, razvijamo i inteligentne <b>BIM (Building Information Modeling)</b> modele. Ovi modeli ne sadrže samo geometrijske informacije, već i sve relevantne podatke o komponentama objekta, njihovim karakteristikama i međusobnim vezama. Implementacija 3D vizualizacija i BIM modela značajno doprinosi ranom identifikovanju potencijalnih problema i konflikata u dizajnu, pre nego što oni eskaliraju na gradilištu.
+              Pored vizualizacija, razvijamo i inteligentne <b>BIM (Building Information Modeling)</b> modele. Ovi modeli ne sadrže samo geometrijske informacije, već i sve relevantne podatke o komponentama objekta, njihovim karakteristikama i međusobnim vezama. Implementacija 3D vizualizacija i BIM modela značajno doprinosi ranom identifikovanju potencijalnih problema i konflikata u dizajnu, pre nego što oni eskaliraju na gradilištu.
             </p>
           </div>
 
