--- a/celicna-nadstresnica.html
+++ b/celicna-nadstresnica.html
@@ -66,7 +66,7 @@
               </li>
               <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
               <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
-              <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+              <li class="dropdown"><a href="#"><span>3D vizualizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
                   <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
